[gd_scene load_steps=10 format=3 uid="uid://b0dirb8dawr3l"]

[ext_resource type="Script" uid="uid://cohtrhiy80jo1" path="res://Scripts/Globais/AvisoItem.gd" id="1_n4c84"]
[ext_resource type="Shader" uid="uid://c1omtsxv04udh" path="res://Scripts/Shaders/blur_shader.gdshader" id="2_7m40o"]
[ext_resource type="Texture2D" uid="uid://dxetesue4pk34" path="res://Sprites/UI/Pause/Pecas/COLETA_ITEM.png" id="2_j1nce"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2llkm"]
shader = ExtResource("2_7m40o")
shader_parameter/darkness = 0.6000000285
shader_parameter/lod = 0.800000038

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7m40o"]
texture = ExtResource("2_j1nce")

[sub_resource type="Animation" id="Animation_j1nce"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AvisoItem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_7m40o"]
resource_name = "TelaOff"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AvisoItem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_n4c84"]
resource_name = "TelaOn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AvisoItem:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7m40o"]
_data = {
&"RESET": SubResource("Animation_j1nce"),
&"TelaOff": SubResource("Animation_7m40o"),
&"TelaOn": SubResource("Animation_n4c84")
}

[node name="AvisoItem" type="CanvasLayer"]
process_mode = 3
layer = 1001
script = ExtResource("1_n4c84")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_2llkm")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="AvisoItem" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -655.5
offset_top = -308.0
offset_right = 655.5
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7m40o")

[node name="Conteudo" type="Control" parent="AvisoItem"]
layout_mode = 2

[node name="NomeItemAviso" type="RichTextLabel" parent="AvisoItem/Conteudo"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 545.5
offset_top = 79.0
offset_right = 1151.5
offset_bottom = 167.0
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 50
text = "Nome Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ImgItemAviso" type="TextureRect" parent="AvisoItem/Conteudo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 0
offset_left = 114.5
offset_top = 182.0
offset_right = 370.5
offset_bottom = 438.0
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="DescItemAviso" type="RichTextLabel" parent="AvisoItem/Conteudo"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 455.5
offset_top = 184.0
offset_right = 1245.5
offset_bottom = 537.0
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 40
text = "Descrição Item"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Anim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_7m40o")
}
